--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "gatsby": "^4.16.0",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-manifest": "^4.17.0",
+    "gatsby-plugin-offline": "^5.17.0",
     "gatsby-plugin-react-helmet": "^5.17.0",
     "gatsby-plugin-sharp": "^4.16.1",
     "gatsby-source-filesystem": "^4.16.0",
